Fix overlap of groupmessage container

--- a/AnthraClient/client/web/src/Dashboard/Components/Groups/GroupModal/GroupModal.css
+++ b/AnthraClient/client/web/src/Dashboard/Components/Groups/GroupModal/GroupModal.css
@@ -9,7 +9,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 3;
+    z-index: 5;
 }
 
 
